# Opaque

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  backup.sh  backup_cronjob  flake.nix  minnehack.service  sqlx-data.json  test.html  testSponsors.json  up.sql
flake-scripts/: shellHook.sh
hooks/: pre-commit
migrations/: init.sql
migrations/2020-11-01-031631_create_reg/: down.sql  up.sql
migrations/2022-01-03-210021_mlh/: down.sql  up.sql
migrations/2022-10-17-041024_default/: down.sql  up.sql
old/: spec.md
src/: main.rs  models.rs  schema.rs
storage/: README.md
