[package]
name = "mh21-backend"
version = "0.1.0"
authors = ["LawAbidingCactus <lawabidingcactus@lawabidingcactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.4", features = ["mysql"] }
rand = "0.8.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
