[package]
name = "opaque"
version = "0.1.0"
authors = [ "Hemant Sai Gouni <hemant@hemantgouni.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rand = "0.8.5"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = [ "sqlx_mysql" ]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ "macros", "offline" ]
